<resources>
    <string name="app_name">marqur</string>

    <string name="title_activity_map_view">Map</string>
    <string name="title_activity_map_add_marker">Add Marker</string>
    <string name="title_activity_main">marqur</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title">Title</string>
    <string name="label">Label</string>
    <string name="enter_title">Enter Title</string>
    <string name="edit_marker_content">Edit Content</string>
    <string name="edit_marker_title">Edit Title</string>
    <string name="upload">Upload</string>
    <string name="choose_picture">Choose picture</string>
    <string name="enter_description">Enter description</string>
    <string name="add_marker">Add Marker</string>
    <string name="Location">Location Not Found</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
    <string name="action_settings">Settings</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="expanding_group">Heading</string>
    <string name="expanding_group_subtitle">Subheading</string>
    <string name="markers_in_your_area">Markers in your area...</string>

</resources>
